Some interesting changes

--- a/webApp/index.html
+++ b/webApp/index.html
@@ -225,9 +225,11 @@
                                     <div id="apkName">NA</div>
                                 </div>
                                 <ul class="options">
-                                    <li id="projectName">Not available</li>
                                     <li id="executionMethod">Not available</li>
+                                    <li id="maxNumberOfEvents">Not available</li>
                                     <li id="numberOfEvents">Not available</li>
+                                    <li id="maxTime">Not available</li>
+                                    <li id="time">Not available</li>
                                     <li id="startingDate">Not available</li>
                                     <li id="finishDate">Not available</li>
                                 </ul>
