generate log and hide static

--- a/webApp/index.html
+++ b/webApp/index.html
@@ -458,7 +458,7 @@
 
 
         <!-- #Pricing Table -->
-        <section id="static" class="section-title text-center">
+<!--        <section id="static" class="section-title text-center">
             <div class="container relative">
                 <h2>Static model</h2>
                 <a href="#static" class="section-anchor">
@@ -468,7 +468,7 @@
         </section>
         <section class="top-full bottom-half">
             <div class="container">
-                <!-- /.section-title -->
+                &lt;!&ndash; /.section-title &ndash;&gt;
                 <div class="section-intro text-center">
                     <h4>
                         <span>Static model</span>
@@ -476,14 +476,14 @@
                     <span class="sep"></span>
                     <p>Application's static model</p>
                 </div>
-                <!-- /.section-intro -->
+                &lt;!&ndash; /.section-intro &ndash;&gt;
                 <div class="row">
                     <svg class "col-md-12" id="staticGraph"></svg>
                 </div>
 
             </div>
-            <!-- /.container -->
-        </section>
+            &lt;!&ndash; /.container &ndash;&gt;
+        </section>-->
 
         <!-- #Pricing Table -->
         <section id="log" class="section-title text-center">
